# Notebooks

./: .gitignore  README.md
ocean_dx12/: CMakeLists.txt  CMakePresets.json
ocean_dx12/shaders/: basic.hlsl
ocean_dx12/src/: main.cpp  wave_spectrum.cpp  wave_spectrum.h
